Let `logging.structured.json.customizer` accept multiple Customizers also
See https://github.com/spring-projects/spring-boot/issues/43312#issuecomment-2509058761

Signed-off-by: Yanming Zhou <zhouyanming@gmail.com>